--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^3.3.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
